[package]
name = "bevy_touch_camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", default-features = false }

[dev-dependencies.bevy]
version = "0.11.2"
default-features = false
features = [
    "bevy_core_pipeline",
]

[features]
default = []
example = ["bevy/bevy_winit", "bevy/x11", "bevy/bevy_core_pipeline", "bevy/bevy_sprite"]

[[example]]
name = "simple"
required-features = ["example"]